cholera 0.2.9.9006
----------------------------------------------------------------

* use code from neighborhoodPaths() for neighborhoodWalking().


cholera 0.2.9.9005
----------------------------------------------------------------

* add expected area plot to neighborhoodPaths().


cholera 0.2.9.9004
----------------------------------------------------------------

* implement parallelization of neighborhoodPaths().


cholera 0.2.9.9003
----------------------------------------------------------------

* add expected paths (observed = FALSE) to neighborhoodPaths().


cholera 0.2.9.9002
----------------------------------------------------------------

* update yard distance factor in addWhitehead().
* fix pump labels in caseLocator().
* add unitMeter().


cholera 0.2.9.9001
----------------------------------------------------------------

* add segmentLength().
* add segmentLength() to segmentLocator().


cholera 0.2.9.9000
----------------------------------------------------------------

* add neighborhoodPaths() w/ S3 plot and print methods.


cholera 0.2.1.9014
----------------------------------------------------------------

* add nearestPump() and nearestPath().


cholera 0.2.1.9013
----------------------------------------------------------------

* update neighborhoodDistances().
* add print method to timeSeries().
* add S3 implementation of classifierAudit().
* add addIndexCase().


cholera 0.2.1.9012
----------------------------------------------------------------

* amend S3 implementation of neighborhoodVoronoi() and neighborhoodWalking().


cholera 0.2.1.9011
----------------------------------------------------------------

* add S3 implementation of walkingDistance() w/ plot and print methods.


cholera 0.2.1.9010
----------------------------------------------------------------

* add S3 implementation of euclideanDistance() w/ plot and print methods.


cholera 0.2.1.9009
----------------------------------------------------------------
