@@ -2,6 +2,7 @@ cholera 0.2.9.9006
 ----------------------------------------------------------------
 
 * use code from neighborhoodPaths() for neighborhoodWalking().
+* highlight segment cases in segmentLocator().
 
 
 cholera 0.2.9.9005
